# python-project-template

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  copier.yaml  mkdocs.yaml  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: docs.yaml
docs/: _nav.md  index.md
docs/assets/: custom.css
docs/best-practice/: documentation.md  testing.md  versioning.md
docs/developer-guide/: documentation.md
docs/developer-guide/template/: Calculated Variables.md  index.md
docs/reference/: terminology.md  terms.md
docs/reference/tooling/: bumpversion.md  git.md  mkdocs.md  sphinx.md
docs/user-guide/: first-project.md  getting-started.md  next-steps.md  project-structure.md  task-execution.md
docs/user-guide/documentation/: index.md  mkdocs.md  sphinx.md
docs/user-guide/explanations/: task-execution.md
docs/user-guide/setup/: index.md
docs/user-guide/topics/: ci.md  documentation.md  task-execution.md  testing.md  versioning.md
docs/util/: glossary.md  macros.py
src/init_python_project/: cli.py  copier.yaml
template/: .gitignore  .gitignore.jinja  .gitlab-ci.yml  .gitlab-ci.yml.jinja  CHANGELOG.md.jinja  Makefile  Makefile.jinja  README.md.jinja  context  mkdocs.yaml.jinja  pyproject.toml  pyproject.toml.jinja  {% if docs == 'mkdocs' %}mkdocs.yaml{% endif %}.jinja  {% if docs == 'mkdocs' %}mkdocs.yml{% endif %}.jinja  {% if precommit %}.pre-commit-config.yaml{% endif %}.jinja  {% if remote.startswith('gitlab') %}.gitlab-ci.yml{% endif %}.jinja  {% if use_precommit %}.pre-commit-config.yaml{% endif %}.jinja
template/docs/: reference.md.jinja
template/src/{{package_name}}/: simple.py  (+1 more)
template/tests/: test_cli.py.jinja  test_simple.py  test_simple.py.jinja
template/{% if docs == 'mkdocs' %}docs{% endif %}/: requirements.txt
template/{% if docs == 'sphinx' %}docs{% endif %}/: conf.py.jinja  index.md
template/{% if docs == 'sphinx' and docs_template=='none' %}docs{% endif %}/: conf.py.jinja
test/: test_template.py
tests/: test_cli.py  test_package.py  test_template.py
(+2 files in other folders)
