[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]

[project]
name = "python-project-template"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jannis Mainczyk", email = "jmainczyk@github.com" }]
maintainers = [{ name = "Jannis Mainczyk", email = "jmainczyk@github.com" }]
dependencies = ["copier", "typer[all]"]
dynamic = ["version"]

[tool.setuptools]
py-modules = ["init_python_project"]

[tool.setuptools_scm]
fallback_version = "0.0.1"


[project.optional-dependencies]
dev = ["black", "pre-commit", "ruff"]
test = ["pytest", "pytest-venv", "pytest-xdist"]
doc = [
    "mkdocs-material",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-literate-nav",
    "mkdocs-macros-plugin",
    "mkdocs-macros-includex",
    "mkdocs-exclude",
    "mkdocs-autorefs",
    "pyyaml",
]

[project.scripts] # optional
init-python-project = "init_python_project:app"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = ["slow"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
